# sara-timeseries

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  catalog-info.yaml  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: compile_python_requirements_and_create_pr.yml  compile_requirements.yml  deploy_to_development.yml  deploy_to_staging.yml  promote_to_production.yml  publish_component.yml  pythonpackage.yml  test_and_lint_python_package.yml  update_aurora_deployment.yml
sara_omnia/: api.py  logger.py  models.py  omnia_service.py  utils.py
sara_timeseries/: api.py  app.py  authetication.py  models.py  omnia_service.py
sara_timeseries/core/: credentials.py  logger.py  open_telemetry.py  settings.py
sara_timeseries/modules/sara_timeseries_api/: models.py  omnia_service.py  timeseries_controller.py  timeseries_service.py
sara_timeseries/modules/sara_timeseries_insights/: blob_store.py  consolidated_co2_timeseries.json  insights_controller.py  insights_service.py  map_corners.json  models.py  sara_sap_api.py  visualize_gas_concentration.py
tests/: test_api.py  test_omnia_service.py
tests/core/: test_credentials.py
tests/modules/sara_timeseries_api/: test_omnia_service.py  test_timeseries_controller.py
tests/modules/sara_timeseries_insights/: test_insights_service.py
tests/modules/sara_timeseries_insights/test_data/: co2_measurements.json  consolidated_co2_timeseries.json
timeseries_mock/: README.md  http_timeseries_api.py  omnia_timeseries_mock.py  pyproject.toml  requirements.txt
