[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "timeseries-mock"
authors = [{ name = "Equinor ASA", email = "fg_robots_dev@equinor.com" }]
description = "Local Omnia Timeseries mock (Flask app)"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["Flask", "Werkzeug", "requests"]
version = "0.1.0"
